--- a/game-style.css
+++ b/game-style.css
@@ -9,6 +9,10 @@ body {
     display: grid;
     place-items: center;
 }
+.buttons {
+    display: grid;
+    place-items: center;
+} 
 .game-button {
     background: rgb(96, 96, 216);
     border: none;
@@ -21,4 +25,21 @@ body {
 .game-button:hover {
     scale: 1.05;
     opacity: 0.9;
+}
+.results {
+    font-size: 30px;
+    margin: 10px;
+    padding: 10px;
+    text-align: center;
+    width: 99%;
+    color: white;
+}
+.draw {
+    background: rgb(104, 177, 230);
+}
+.victory {
+    background: rgb(20, 200, 50);
+}
+.defeat {
+    background: rgb(250, 20, 50);
 }
